--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-native-config": "^1.5.1",
     "react-native-detect-frida": "^0.1.3",
     "react-native-device-info": "^10.11.0",
+    "react-native-draggable": "^3.3.0",
     "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
