--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-star-rating-widget": "^1.9.1",
     "react-native-svg": "^14.0.0",
     "react-native-toast-message": "^2.1.7",
     "react-native-uuid": "^2.0.1",
